Dependency update and code re-organization
