# sbn_survey_image_service/api/openapi.yaml
@@ -2,16 +2,18 @@ openapi: 3.0.0
 servers:
   - url: https://sbnsurveys.astro.umd.edu/api/
 info:
-  title: SBN Survey Image Service (Working Draft)
-  version: "0.2.0"
+  title: SBN Survey Image Service
+  version: {{version}}
   description: API for serving images, cutouts, and data labels from survey data provided by the NASA Planetary Data System Small Bodies Node.  Note that this service is more closely aligned with IVOA concepts, rather than PDS4 concepts.  (PDS4-concept supported queries will be possible in the future with the PDS4 Registry.)
+servers:
+  - url: {{base_href}}
 paths:
   /images/{id}:
     get:
       tags:
         - Survey images and labels
       summary: Get survey image (full-size or sub-frame) or label corresponding to the requested image ID.  Image data may be returned in FITS, JPEG, or PNG formats.
-      operationId: sbn_survey_image_service.api.app.get_image
+      operationId: sbn_survey_image_service.api.images.get_image
       parameters:
         - name: id
           in: path
@@ -89,7 +91,7 @@ paths:
       tags:
         - Search survey metadata
       summary: Search survey metadata
-      operationId: sbn_survey_image_service.api.app.run_query
+      operationId: sbn_survey_image_service.api.query.run_query
       parameters:
         - name: collection
           in: query
@@ -201,7 +203,7 @@ paths:
       tags:
         - Database summary
       summary: Database summary, describing the collections, facilities, instruments, and number of data products.
-      operationId: sbn_survey_image_service.api.app.get_summary
+      operationId: sbn_survey_image_service.api.summary.get_summary
       responses:
         "200":
           description: Summary
